--- a/package.json
+++ b/package.json
@@ -2,13 +2,10 @@
   "scripts": {
     "build": "rm -rf dist && parcel build src/index.html --no-minify --public-url ./"
   },
-  "devDependencies": {
-    "cssnano": "^4.1.10"
-  },
   "name": "nav-1",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "git@github.com:FrankFang/nav-1.git",
-  "author": "frankfang <frankfang1990@gmail.com>",
+  "repository": "git@github.com:calicostie/nav-1.git",
+  "author": "calicostie <lllllxxt@gmail.com>",
   "license": "MIT"
 }
